kubernetes/apps/kube-system/hubble/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app hubble
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
    traefik.ingress.kubernetes.io/router.middlewares: network-forward-auth@kubernetescrd  
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host hubble.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
  - hosts:
      - hubble.cloud.icylair.com
    secretName: icylair-com-all-prod
